2009-04-18 Kazuhiko
* Version 5.4.1

2009-04-03 yusei
* Add decimal alignment option to Quantity Divergence Tester.

2009-03-16 Kazuhiko
* remove ooo_import action in Person Module that is replaced by erp5_ooo_import business template with more generic and better import function.

2009-02-25 ivan
* Add portal_introspections tool
* Add portal_web_services tool

2009-01-27 yusei
* Added destination_carrier, destination_referral, source_carrier, source_referral categories which are defined in Arrow property sheet.

2009-01-26 yusei
* Added Monthly Range Movement Group.
* Added a default view action to Day Movement Group.

2009-01-22 yusei
* Added bank_account_type category and use it in BankAccount_view.

2008-12-17 nicolas
* add Day Movement Group portal_type

2008-12-02 rafael
* Disable Acquire Local Roles in Credit Cards (as done in Bank Account)

2008-11-13 yusei
* Start to develop version 5.4.

2008-11-06 fabien
* fix some problems in Base_viewLocalPermissionList view (replace id with title in the listbox, make title not editable and remove reference because it's not used everywhere)

2008-10-28 yusei
* Product Interest field is now translatable.

2008-10-14 yusei
* Start to develop version 5.3.

2008-09-24 yusei
* Update xml format.

2008-09-16 Kazuhiko
* move Divergence Tester, Delivery Builder, Delivery Tool, Order Builder, Order Tool, delivery_causality_interaction_workflow, delivery_causality_workflow, delivery_movement_causality_interaction_workflow, delivery_movement_simulation_interaction_workflow, delivery_simulation_interaction_workflow, order_movement_simulation_interaction_workflow, order_simulation_interaction_workflow and simulation_movement_causality_interaction_workflow from erp5_core to erp5_base.
* Make delivery_causality_workflow generic and enable partial solving of divergence and partial splitting.

2008-09-07
* Update English messages.

2008-09-04 yusei
* Fixed workflow title.
* Update English messages.

2008-08-29 yusei