@@ -1,3 +1,7 @@
+2009-07-03 nicolas
+* add cache plugin and memcached plugin for Persistent Caching of document conversions.
+Flare should be installed and running
+
 2009-04-18 Kazuhiko
 * Version 5.4.1
 
